Implemented score display and tracking. Also some bugfixes - In case of no user input for initials, the quiz ends without saving the score. - Limited initials to 2 characters and converts lowercase letters to uppercase. - Modified the quiz system to accommodate questions with more than one correct answer by revising checkAnswer function to treat correctAnswer as an array of correct answers. - Adjusted HTML structure to display score and result below the timer. - Updated CSS rules to properly style and align the new score and result elements. - The checkAnswer function was modified to update the score display and result feedback every time an answer is selected. - Added deployed link to the README

--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,10 @@ button {
     gap: 1.75vw; /* adjust this value as needed for spacing between buttons */
     width: 100%; /* adjust as needed */
 }
+
+#score-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.25vw;
+}
